--- a/work.ipynb
+++ b/work.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "dc8988b3",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "id": "4b0fe05f",
    "metadata": {},
    "outputs": [
@@ -410,7 +410,7 @@
        "[3870 rows x 44 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "1f3cf8a7",
    "metadata": {},
    "outputs": [
@@ -446,7 +446,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "4be29c9a",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "7f0713e6",
    "metadata": {},
    "outputs": [],
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "id": "ed83c7b7",
    "metadata": {},
    "outputs": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "id": "f7f4409e",
    "metadata": {},
    "outputs": [],
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "id": "8e8c8529",
    "metadata": {},
    "outputs": [],
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "id": "01bae395",
    "metadata": {},
    "outputs": [],
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "id": "84adb7c3",
    "metadata": {},
    "outputs": [
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "id": "8070f95e",
    "metadata": {},
    "outputs": [
@@ -779,7 +779,7 @@
        "Index(['Ganaura', 'CropOrgFYM', '2tdUrea', '2appDaysUrea'], dtype='object')"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "id": "8e79a222",
    "metadata": {},
    "outputs": [],
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "id": "4db25b21",
    "metadata": {},
    "outputs": [],
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "id": "6ae793ee",
    "metadata": {},
    "outputs": [],
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "id": "cdfad6b3",
    "metadata": {},
    "outputs": [],
@@ -843,17 +843,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 16,
    "id": "af2585f4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3870, 47)"
+       "(3870, 31)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,19 +864,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 17,
    "id": "adc4908d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1tdUrea    float64\n",
-       "1tdUrea    float64\n",
-       "dtype: object"
+       "dtype('float64')"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 35,
    "id": "232f6b00",
    "metadata": {},
    "outputs": [
@@ -923,23 +921,7 @@
        "StandingWater                          238\n",
        "BasalDAP                               543\n",
        "BasalUrea                             1704\n",
-       "1tdUrea                                556\n",
-       "1appDaysUrea                           556\n",
-       "Harv_hand_rent                         252\n",
-       "Acre                                     0\n",
-       "RcNursEstDate_Year                      83\n",
-       "RcNursEstDate_Month                     83\n",
-       "RcNursEstDate_Day                       83\n",
-       "Time_Between_Tillage_Est                83\n",
-       "Harv_date_Month_Sin                      0\n",
-       "Harv_date_Month_Cos                      0\n",
-       "SeedlingsPerPit                        289\n",
-       "TransplantingIrrigationHours           193\n",
-       "TransIrriCost                          882\n",
-       "StandingWater                          238\n",
-       "BasalDAP                               543\n",
-       "BasalUrea                             1704\n",
-       "1tdUrea                                556\n",
+       "1tdUrea                                  0\n",
        "1appDaysUrea                           556\n",
        "Harv_hand_rent                         252\n",
        "Acre                                     0\n",
@@ -952,7 +934,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,15 +945,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 30,
    "id": "c053fac0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2[\"Time_Between_Tillage_Est\"].dtype"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 19,
    "id": "43bf9f78",
    "metadata": {},
    "outputs": [],
@@ -988,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 20,
    "id": "287444c0",
    "metadata": {},
    "outputs": [
@@ -998,14 +993,12 @@
        "dtype('O')"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df2[\"MineralFertAppMethod.1\"].dtype"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1017,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 21,
    "id": "612d7a74",
    "metadata": {},
    "outputs": [],
@@ -1034,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 22,
    "id": "9ea7f597",
    "metadata": {},
    "outputs": [],
@@ -1051,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 23,
    "id": "ffb9d643",
    "metadata": {},
    "outputs": [],
@@ -1068,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 24,
    "id": "0abad61f",
    "metadata": {},
    "outputs": [],
@@ -1085,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "4d701da1",
    "metadata": {},
    "outputs": [],
@@ -1103,6 +1096,70 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "da49bf6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dcaf6b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0af334dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ebf768f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "556b3418",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12385fb8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2188b87c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cf4584b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "605ad1f9",
    "metadata": {},
    "outputs": [],
@@ -1110,22 +1167,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 34,
    "id": "c98a60f3",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_12584\\1146730629.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0mhigh_value\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf2\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'1tdUrea'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mrandom_values\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnormal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmean_value\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscale\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstd_dev\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmissing_values\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;31m# Clip the random values to the range of the existing values\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -1137,12 +1182,12 @@
     "missing_values = df2['1tdUrea'].isnull()\n",
     "\n",
     "# Step 3: Generate random numbers within the range of existing values\n",
-    "mean_value = df2['1tdUrea'].mean().values[0]\n",
-    "std_dev = df2['1tdUrea'].std().values[0]\n",
+    "mean_value = df2['1tdUrea'].mean()\n",
+    "std_dev = df2['1tdUrea'].std()\n",
     "\n",
     "# Convert low and high to the same data type as the column\n",
-    "low_value = df2['1tdUrea'].min().astype(float).values[0]\n",
-    "high_value = df2['1tdUrea'].max().astype(float).values[0]\n",
+    "low_value = df2['1tdUrea'].min()\n",
+    "high_value = df2['1tdUrea'].max()\n",
     "\n",
     "random_values = np.random.normal(loc=mean_value, scale=std_dev, size=sum(missing_values))\n",
     "\n",
@@ -1150,95 +1195,80 @@
     "random_values = np.clip(random_values, low_value, high_value)\n",
     "\n",
     "# Step 4: Fill missing values with the randomly generated numbers\n",
-    "df2.loc[missing_values, '1tdUrea'] = random_values\n",
-    "\n",
-    "# Step 5: Verify the changes\n",
-    "#print(df2.head())\n"
+    "df2.loc[missing_values, '1tdUrea'] = random_values\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "id": "e5451beb",
+   "execution_count": null,
+   "id": "46315528",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 148,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "low_value.values[0]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "id": "b5e445c3",
+   "execution_count": null,
+   "id": "f99f920a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8.715856353569476"
-      ]
-     },
-     "execution_count": 153,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "std_dev.values[0]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
-   "id": "40dac187",
+   "execution_count": null,
+   "id": "9cba69e1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1tdUrea    float64\n",
-      "1tdUrea    float64\n",
-      "dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df2['1tdUrea'].dtypes)\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "id": "aa7d021a",
+   "execution_count": null,
+   "id": "a4644df7",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_12584\\3201585877.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmissing_values\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
-     ]
-    }
-   ],
-   "source": [
-    "sum(missing_values)"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8f5dc22",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "689a1e8f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b925febd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f9b9fd9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d57006e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
