--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -1508,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "f3ea5f4c",
    "metadata": {},
    "outputs": [],
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "bad3600a",
    "metadata": {},
    "outputs": [
@@ -1624,7 +1624,7 @@
        "4  142107.34        91391.77        366168.42     Florida  166187.94"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2257,15 +2257,460 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bf989835",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "97ed710d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>R&amp;D Spend</th>\n",
+       "      <th>Administration</th>\n",
+       "      <th>Marketing Spend</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Profit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>165349.20</td>\n",
+       "      <td>136897.80</td>\n",
+       "      <td>471784.10</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>192261.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>162597.70</td>\n",
+       "      <td>151377.59</td>\n",
+       "      <td>443898.53</td>\n",
+       "      <td>California</td>\n",
+       "      <td>191792.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>153441.51</td>\n",
+       "      <td>101145.55</td>\n",
+       "      <td>407934.54</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>191050.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>144372.41</td>\n",
+       "      <td>118671.85</td>\n",
+       "      <td>383199.62</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>182901.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>142107.34</td>\n",
+       "      <td>91391.77</td>\n",
+       "      <td>366168.42</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>166187.94</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   R&D Spend  Administration  Marketing Spend       State     Profit\n",
+       "0  165349.20       136897.80        471784.10    New York  192261.83\n",
+       "1  162597.70       151377.59        443898.53  California  191792.06\n",
+       "2  153441.51       101145.55        407934.54     Florida  191050.39\n",
+       "3  144372.41       118671.85        383199.62    New York  182901.99\n",
+       "4  142107.34        91391.77        366168.42     Florida  166187.94"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Startups.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "dc831755",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# seperate the feature from the target\n",
+    "X = Startups.iloc[:, :-1]\n",
+    "y = Startups[\"Profit\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1c3e35ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# transform the state columns\n",
+    "X = pd.get_dummies(X, columns=[\"State\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "e3017668",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split the data into train and val\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "x_train, x_val, y_train, y_val = train_test_split(X, y, train_size=0.9, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e37eca02",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "059364b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build the model\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "lr = LinearRegression()\n",
+    "model_1 = lr.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8681e80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "6f6148eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluation\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "prediction_1 = model_1.predict(x_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "5554a2b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6777.573873301619"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_1 = mean_absolute_error(y_val, prediction_1)\n",
+    "eval_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1419d18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebf85450",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "178cc8d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f209cf5b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1b0e6f0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcaf5721",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c1d8dfc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fae297e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f3b18c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4835d99",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3805070d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5d209d98",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "17 20--====== -3 ======= 3"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8c3a72e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "30  25===== 5 ==== 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6351366",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "12 11 ===== 1===== 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "68bffac1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " ( 3 + 5 + 1)/ 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a83f6d18",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.666666666666667"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(3  + 4 + 7) /3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7a8ef1e",
+   "metadata": {},
+   "source": [
+    "When I mention the \"specific problem you are trying to solve\" and the \"characteristics of your data,\" I am referring to the nature of the task you want to perform with regression and the properties of the dataset you are working with. Different regression algorithms may perform better or worse depending on the characteristics of the problem and data.\n",
+    "\n",
+    "Let me elaborate on these two aspects:\n",
+    "\n",
+    "1. **Specific Problem:**\n",
+    "   - Regression is a type of supervised learning used for predicting continuous output values. The nature of the prediction task influences the choice of regression algorithm. For example:\n",
+    "     - Linear Regression is often suitable for problems where the relationship between input features and output is approximately linear.\n",
+    "     - Decision Trees or Random Forests might be effective for capturing non-linear relationships.\n",
+    "     - Support Vector Regression (SVR) is useful when dealing with complex decision boundaries.\n",
+    "\n",
+    "2. **Characteristics of Your Data:**\n",
+    "   - The properties of your dataset, such as the number of features, the amount of data, and the presence of outliers, can impact the choice of regression algorithm. For instance:\n",
+    "     - Linear Regression assumes a linear relationship between features and the target. If the relationship is highly non-linear, other algorithms may be more appropriate.\n",
+    "     - Ridge or Lasso Regression might be beneficial when dealing with multicollinearity among features.\n",
+    "     - Decision Trees or Random Forests can handle non-linear relationships and are less sensitive to outliers.\n",
+    "\n",
+    "In summary, understanding the specific requirements of your prediction task and the characteristics of your dataset allows you to choose an appropriate regression algorithm. It's often a good practice to try multiple algorithms, evaluate their performance using appropriate metrics, and select the one that best fits your specific problem and data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "189bf61a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba99edf6",
+   "metadata": {},
+   "source": [
+    "Evaluating whether the relationship between input features and the output is approximately linear involves examining the data visually and using statistical methods. Here are some common approaches:\n",
+    "\n",
+    "1. **Scatter Plots:**\n",
+    "   - Create scatter plots to visualize the relationship between each input feature and the output variable. If the points on the scatter plot roughly form a straight line, it suggests a linear relationship. Multiple scatter plots can be created for different pairs of features and the target variable.\n",
+    "\n",
+    "2. **Correlation Coefficient:**\n",
+    "   - Calculate the correlation coefficient between each input feature and the output variable. The correlation coefficient measures the strength and direction of a linear relationship. A value close to 1 or -1 indicates a strong linear relationship, while a value close to 0 suggests a weak or no linear relationship.\n",
+    "\n",
+    "     ```python\n",
+    "     import pandas as pd\n",
+    "\n",
+    "     # Assuming df is your DataFrame\n",
+    "     correlation_matrix = df.corr()\n",
+    "     correlation_with_target = correlation_matrix['target_variable']\n",
+    "     ```\n",
+    "\n",
+    "3. **Residual Plots:**\n",
+    "   - Fit the linear regression model to your data and create residual plots. Residuals are the differences between the actual and predicted values. A good linear fit should result in residuals scattered randomly around zero. Patterns in residuals can indicate non-linearity.\n",
+    "\n",
+    "     ```python\n",
+    "     from sklearn.linear_model import LinearRegression\n",
+    "     import seaborn as sns\n",
+    "     import matplotlib.pyplot as plt\n",
+    "\n",
+    "     # Assuming X is your feature matrix and y is your target variable\n",
+    "     model = LinearRegression()\n",
+    "     model.fit(X, y)\n",
+    "     predictions = model.predict(X)\n",
+    "\n",
+    "     # Plot residuals\n",
+    "     residuals = y - predictions\n",
+    "     sns.scatterplot(x=predictions, y=residuals)\n",
+    "     plt.axhline(y=0, color='r', linestyle='--')\n",
+    "     plt.show()\n",
+    "     ```\n",
+    "\n",
+    "4. **Polynomial Regression:**\n",
+    "   - Polynomial regression can be used to capture non-linear relationships by introducing polynomial terms. If adding polynomial terms significantly improves the model fit, it suggests a non-linear relationship.\n",
+    "\n",
+    "     ```python\n",
+    "     from sklearn.preprocessing import PolynomialFeatures\n",
+    "     from sklearn.pipeline import make_pipeline\n",
+    "\n",
+    "     degree = 2  # or another degree\n",
+    "     model = make_pipeline(PolynomialFeatures(degree), LinearRegression())\n",
+    "     model.fit(X, y)\n",
+    "     ```\n",
+    "\n",
+    "These methods provide insights into the linearity of the relationship. Keep in mind that some relationships may be non-linear, and other regression techniques or feature transformations may be more appropriate in such cases. Always validate your findings and model assumptions through cross-validation and other relevant evaluation techniques."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c229548",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2273,7 +2718,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a83f6d18",
+   "id": "8c56fa86",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2b26bfd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "244b86e7",
    "metadata": {},
    "outputs": [],
    "source": []
